--- a/src/styles/components/base/_global.scss
+++ b/src/styles/components/base/_global.scss
@@ -7,8 +7,13 @@
 }
 
 html {
-  background-color: #0093e9;
-  background-image: linear-gradient(160deg, #0093e9 0%, #80d0c7 100%);
+  background-color: #ff3cac;
+  background-image: linear-gradient(
+    225deg,
+    #ff3cac 0%,
+    #784ba0 50%,
+    #2b86c5 100%
+  );
 }
 
 body {
@@ -16,7 +21,6 @@ body {
 }
 
 body {
-  font-family: "Commissioner", sans-serif;
   font-size: 16px;
   line-height: 20px;
   color: #282828;
