--- a/src/styles/components/common/_movies.scss
+++ b/src/styles/components/common/_movies.scss
@@ -5,6 +5,28 @@
   line-height: normal;
 }
 
+.movies-filter{
+  display: flex;
+  gap: 16px;
+  margin-bottom: 36px;
+}
+
+.movies-label{
+  color: #fff;
+  font-size: 18px;
+  font-weight: 500;
+  letter-spacing: 0.3px;
+  margin-right: 8px;
+}
+
+.movies-select{
+  color: #282828;
+  font-weight: 400;
+  border-radius: 4px;
+  padding: 4px;
+  cursor: pointer;
+}
+
 .movies-list {
   display: flex;
   flex-wrap: wrap;
