--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,3 +5,4 @@
 @import "components/common/form";
 @import "components/common/movies";
 @import "components/common/pagination";
+@import "components/common/movieDetail";
