create favorte page and implement add to favorite movies functionality

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,3 +6,6 @@
 @import "components/common/movies";
 @import "components/common/pagination";
 @import "components/common/movieDetail";
+
+@import "components/UI/btn";
+@import "components/UI/icons";
