--- a/src/styles/components/common/_movies.scss
+++ b/src/styles/components/common/_movies.scss
@@ -1,17 +1,10 @@
-.movies{
-  margin-bottom: 36px;
-  margin-top: 24px;
-  color: white;
-  line-height: normal;
-}
-
-.movies-filter{
+.movies-filter {
   display: flex;
   gap: 16px;
   margin-bottom: 36px;
 }
 
-.movies-label{
+.movies-label {
   color: #fff;
   font-size: 18px;
   font-weight: 500;
@@ -19,7 +12,7 @@
   margin-right: 8px;
 }
 
-.movies-select{
+.movies-select {
   color: #282828;
   font-weight: 400;
   border-radius: 4px;
@@ -29,10 +22,10 @@
 }
 
 .movies-list {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 300px);
+  grid-gap: 1rem;
   justify-content: space-between;
-  gap: 16px;
 }
 
 .movies-item {
@@ -45,24 +38,26 @@
 }
 
 .movies-title {
+  display: inline-block;
+  width: 100%;
   text-align: center;
   font-size: 20px;
-  padding: 0 16px 16px;
+  padding: 8px 16px 8px;
   margin-top: auto;
 }
 
-.movies-search-wrapper{
+.movies-search-wrapper {
   margin-left: auto;
 }
 
-.movies-search{
+.movies-search {
   color: #282828;
   font-weight: 400;
   border-radius: 4px;
   padding: 4px;
   border: 1px solid transparent;
 
-  &:focus{
+  &:focus {
     border: 1px solid #3cacff;
   }
 }
