--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,5 @@
 @import "components/layout/layout";
+@import "components/layout/header";
 
 @import "components/base/global";
 
@@ -6,6 +7,7 @@
 @import "components/common/movies";
 @import "components/common/pagination";
 @import "components/common/movieDetail";
+@import "components/common/favorites";
 
 @import "components/UI/btn";
 @import "components/UI/icons";
