--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,6 +8,7 @@
 @import "components/common/pagination";
 @import "components/common/movieDetail";
 @import "components/common/favorites";
+@import "components/common/error";
 
 @import "components/UI/btn";
 @import "components/UI/icons";
