add loader to app

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,6 +9,7 @@
 @import "components/common/movieDetail";
 @import "components/common/favorites";
 @import "components/common/error";
+@import "components/common/loader";
 
 @import "components/UI/btn";
 @import "components/UI/icons";
