--- a/src/styles/components/common/_form.scss
+++ b/src/styles/components/common/_form.scss
@@ -10,6 +10,13 @@
   border-radius: 16px;
   transform: translateX(-50%) translateY(-50%);
   padding: 24px;
+
+  .profile &{
+    position: relative;
+    transform: none;
+    top: 0;
+    left: 0;
+  }
 }
 
 .form-input {
