--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,6 +10,7 @@
 @import "components/common/favorites";
 @import "components/common/error";
 @import "components/common/loader";
+@import "components/common/profile";
 
 @import "components/UI/btn";
 @import "components/UI/icons";
