add outlet, footer, change layout

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,6 @@
 @import "components/layout/layout";
 @import "components/layout/header";
+@import "components/layout/footer";
 
 @import "components/base/global";
 
