--- a/src/styles/components/base/_global.scss
+++ b/src/styles/components/base/_global.scss
@@ -6,8 +6,22 @@
   margin: 0;
 }
 
-html {
-  background-color: #ff3cac;
+body {
+  min-height: 100vh;
+  font-size: 16px;
+  line-height: 20px;
+  color: #282828;
+}
+
+html, body{
+  height: 100%;
+}
+
+.wrapper{
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+    background-color: #ff3cac;
   background-image: linear-gradient(
     225deg,
     #ff3cac 0%,
@@ -16,14 +30,8 @@ html {
   );
 }
 
-body {
-  min-height: 100vh;
-}
-
-body {
-  font-size: 16px;
-  line-height: 20px;
-  color: #282828;
+.main{
+  flex: 1 1 auto;
 }
 
 ul {
