--- a/src/styles/components/base/_global.scss
+++ b/src/styles/components/base/_global.scss
@@ -21,13 +21,8 @@ html, body{
   min-height: 100%;
   display: flex;
   flex-direction: column;
-    background-color: #ff3cac;
-  background-image: linear-gradient(
-    225deg,
-    #ff3cac 0%,
-    #784ba0 50%,
-    #2b86c5 100%
-  );
+  background-color: rgba(32,38,57,1);
+  background-image: linear-gradient( 180deg,  rgba(32,38,57,1) 11.4%, rgba(63,76,119,1) 70.2% );
 }
 
 .main{
