--- a/src/styles/components/common/_form.scss
+++ b/src/styles/components/common/_form.scss
@@ -11,7 +11,7 @@
   transform: translateX(-50%) translateY(-50%);
   padding: 24px;
 
-  .profile &{
+  .profile & {
     position: relative;
     transform: none;
     top: 0;
@@ -26,7 +26,7 @@
   border-radius: 8px;
   padding-left: 16px;
 
-  .form-radiobtn-wrapper &{
+  .form-radiobtn-wrapper & {
     height: auto;
     margin-bottom: 0;
   }
@@ -42,47 +42,46 @@
 
 .form-btn {
   width: 50%;
-  background-color: #8ec5fc;
-  background-image: linear-gradient(62deg, #8ec5fc 0%, #e0c3fc 100%);
+  background-image: linear-gradient(62deg, #2577ff 0%, #ff3b30 100%);
   border: none;
   color: white;
   border-radius: 8px;
   height: 48px;
 
-  .logout &{
+  .logout & {
     width: 300px;
   }
 }
 
-.form-link{
+.form-link {
   width: 50%;
-  color: #e0c3fc;
+  color: #a445f5;
   font-weight: 600;
   letter-spacing: 1px;
   text-align: center;
 }
 
-.form-radiobtn-wrapper{
+.form-radiobtn-wrapper {
   display: flex;
   gap: 8px;
   margin-bottom: 30px;
 }
 
-.form-radiobtn{
+.form-radiobtn {
   display: flex;
   align-items: center;
   gap: 4px;
 }
 
-.form-control-wrapper{
+.form-control-wrapper {
   margin-bottom: 24px;
 }
 
-.form-error{
+.form-error {
   display: inline-block;
   color: rgb(255, 51, 51);
 
-  .form-radiobtn-wrapper &{
-      white-space: nowrap;
+  .form-radiobtn-wrapper & {
+    white-space: nowrap;
   }
 }
