--- a/src/styles/components/common/_movies.scss
+++ b/src/styles/components/common/_movies.scss
@@ -33,7 +33,6 @@
   flex-direction: column;
   gap: 16px;
   width: 300px;
-  background-color: white;
   box-shadow: none;
 }
 
@@ -44,6 +43,7 @@
   font-size: 20px;
   padding: 8px 16px 8px;
   margin-top: auto;
+  color: #fff;
 }
 
 .movies-search-wrapper {
