--- a/src/styles/components/layout/_header.scss
+++ b/src/styles/components/layout/_header.scss
@@ -21,12 +21,16 @@
   color: #fff;
   text-transform: uppercase;
 
+  &.icon-user{
+    margin-left: 18px;
+  }
+
   &:after{
     content: "";
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    right: -12px;
+    right: -20px;
     width: 4px;
     height: 4px;
     background-color: #fff;
