--- a/src/styles/components/common/_form.scss
+++ b/src/styles/components/common/_form.scss
@@ -30,6 +30,10 @@
     height: auto;
     margin-bottom: 0;
   }
+
+  &.invalid{
+    border: 1px solid rgb(236, 12, 12);
+  }
 }
 
 .form-footer {
@@ -50,6 +54,10 @@
 
   .logout & {
     width: 300px;
+  }
+
+  &:disabled{
+    opacity: 0.3;
   }
 }
 
@@ -79,7 +87,7 @@
 
 .form-error {
   display: inline-block;
-  color: rgb(255, 51, 51);
+  color: rgb(236, 12, 12);
 
   .form-radiobtn-wrapper & {
     white-space: nowrap;
