implement register and login with firebase

--- a/src/styles/components/common/_error.scss
+++ b/src/styles/components/common/_error.scss
@@ -35,3 +35,10 @@
     background-color: #282828;
   }
 }
+
+.error-message{
+  margin: 24px 0;
+  font-size: 18px;
+  color: #fff;
+  font-weight: 500;
+}
